--- a/requirements.txt
+++ b/requirements.txt
@@ -37,6 +37,7 @@ Pillow==8.2.0
 priority==1.3.0
 Protego==0.1.16
 protobuf==3.15.8
+psycopg2==2.8.6
 pyasn1==0.4.8
 pyasn1-modules==0.2.8
 pycparser==2.20
